scalability steps
Signed-off-by: Xin Li <xin@hashgraph.com>